fix: url text contrast

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -58,7 +58,7 @@
       @apply my-4 border-l-2 pl-4;
     }
     a {
-      @apply text-blue-500 underline dark:text-green-500;
+      @apply text-blue-800 underline dark:text-green-400;
     }
     table {
       @apply my-4 w-full table-auto border-collapse text-sm;
